Add the practical for Hartree-Fock electronic structure course
Authored-by: Ariadni Boziki <ariadni.boziki@uni.lu>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,6 +52,9 @@ nav:
                         - Profiling and Performance: 'openacc/profiling.md'
         - Python in the HPC:
             - Jupyter server and parallel libraries: 'python/index.md'
+        - Electronic structure methods: 
+            - Introduction: 'electronic_structure_methods/index.md'
+            - Hartree-Fock calculations in PySCF: 'electronic_structure_methods/Hartree-Fock_in_PySCF.md'
         - Environment management and containers:
             - Introduction: 'courses/containerization/index.md'
             - Containers: 'courses/containerization/containers.md'
